contrast prob fixed

--- a/home_page.css
+++ b/home_page.css
@@ -42,3 +42,6 @@ li a {
     float: right;
     position:fixed;
 }
+.introofmetal {
+    background-color: black;
+}
